--- a/app/src/main/res/layout/activity_main_e1.xml
+++ b/app/src/main/res/layout/activity_main_e1.xml
@@ -16,7 +16,7 @@
         <ImageView
             android:id="@+id/banner_E1"
             android:layout_width="wrap_content"
-            android:layout_height="124dp"
+            android:layout_height="@dimen/header_height"
             android:scaleType="centerCrop"
             android:src="@drawable/kit1" />
 
@@ -25,41 +25,41 @@
             android:id="@+id/questionsQty"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginBottom="@dimen/margin_M"
+            android:layout_marginTop="@dimen/margin_M"
             android:background="@color/hot_pink"
-            android:padding="8dp"
+            android:padding="@dimen/padding_S"
             android:text="Questions 1 - 5"
             android:textAllCaps="true"
             android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:textSize="@dimen/text_M" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/margin_M"
             android:background="@drawable/shape"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="@dimen/padding_SM">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/margin_S"
+                android:layout_marginTop="@dimen/margin_S"
                 android:text="@string/question_1"
                 android:textAllCaps="true"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/margin_S"
+                android:layout_marginTop="@dimen/margin_S"
                 android:text="@string/question_E1"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <RadioGroup
                 android:id="@+id/question_E1"
@@ -70,79 +70,79 @@
                     android:id="@+id/qE1_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:paddingLeft="24dp"
+                    android:layout_marginBottom="@dimen/margin_M"
+                    android:paddingLeft="@dimen/padding_L"
                     android:text="@string/jack"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_M" />
 
                 <RadioButton
                     android:id="@+id/qE1_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:paddingLeft="24dp"
+                    android:layout_marginBottom="@dimen/margin_M"
+                    android:paddingLeft="@dimen/padding_L"
                     android:text="@string/tom"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_M" />
 
                 <RadioButton
                     android:id="@+id/qE1_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:paddingLeft="24dp"
+                    android:layout_marginBottom="@dimen/margin_M"
+                    android:paddingLeft="@dimen/padding_L"
                     android:text="@string/dave"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_M" />
 
                 <RadioButton
                     android:id="@+id/qE1_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:paddingLeft="24dp"
+                    android:layout_marginBottom="@dimen/margin_M"
+                    android:paddingLeft="@dimen/padding_L"
                     android:text="@string/prince"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_M" />
             </RadioGroup>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/margin_M"
             android:background="@drawable/shape"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="@dimen/padding_SM">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/margin_S"
+                android:layout_marginTop="@dimen/margin_S"
                 android:text="@string/question_2"
                 android:textAllCaps="true"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/margin_S"
+                android:layout_marginTop="@dimen/margin_S"
                 android:text="@string/question_E2"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <EditText
                 android:id="@+id/question_E2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/margin_S"
+                android:layout_marginTop="@dimen/margin_S"
+                android:layout_marginLeft="@dimen/margin_S"
                 android:background="#f7eff4"
                 android:hint="0"
                 android:inputType="number"
                 android:maxLength="2"
-                android:padding="10dp" />
+                android:padding="@dimen/text_M" />
 
 
         </LinearLayout>
@@ -150,29 +150,29 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/margin_M"
             android:background="@drawable/shape"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="@dimen/padding_SM">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/margin_S"
+                android:layout_marginTop="@dimen/margin_S"
                 android:text="@string/question_3"
                 android:textAllCaps="true"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/margin_S"
+                android:layout_marginTop="@dimen/margin_S"
                 android:text="@string/question_E3"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <RadioGroup
                 android:id="@+id/question_E3"
@@ -183,28 +183,28 @@
                     android:id="@+id/qE3_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:paddingLeft="24dp"
+                    android:layout_marginBottom="@dimen/margin_M"
+                    android:paddingLeft="@dimen/padding_L"
                     android:text="@string/herbivore"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_M" />
 
                 <RadioButton
                     android:id="@+id/qE3_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:paddingLeft="24dp"
+                    android:layout_marginBottom="@dimen/margin_M"
+                    android:paddingLeft="@dimen/padding_L"
                     android:text="@string/omnivore"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_M" />
 
                 <RadioButton
                     android:id="@+id/qE3_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:paddingLeft="24dp"
+                    android:layout_marginBottom="@dimen/margin_M"
+                    android:paddingLeft="@dimen/padding_L"
                     android:text="@string/carnivore"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_M" />
 
 
             </RadioGroup>
@@ -214,109 +214,110 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/margin_M"
             android:background="@drawable/shape"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="@dimen/padding_SM">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/margin_S"
+                android:layout_marginTop="@dimen/margin_S"
                 android:text="@string/question_4"
                 android:textAllCaps="true"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/margin_S"
+                android:layout_marginTop="@dimen/margin_S"
                 android:text="@string/question_E4"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="@dimen/margin_S"
                 android:text="@string/select_all_checkboxes"
                 android:textAllCaps="false"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <CheckBox
                 android:id="@+id/qE4_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:paddingLeft="24dp"
+                android:layout_marginBottom="@dimen/margin_M"
+                android:paddingLeft="@dimen/padding_L"
                 android:text="@string/smell"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <CheckBox
                 android:id="@+id/qE4_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:paddingLeft="24dp"
+                android:layout_marginBottom="@dimen/margin_M"
+                android:paddingLeft="@dimen/padding_L"
                 android:text="@string/sight_in_low_light"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <CheckBox
                 android:id="@+id/qE4_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:paddingLeft="24dp"
+                android:layout_marginBottom="@dimen/margin_M"
+                android:paddingLeft="@dimen/padding_L"
                 android:text="@string/touch"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <CheckBox
                 android:id="@+id/qE4_4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:paddingLeft="24dp"
+                android:layout_marginBottom="@dimen/margin_M"
+                android:paddingLeft="@dimen/padding_L"
                 android:text="@string/hearing"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <CheckBox
                 android:id="@+id/qE4_5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:paddingLeft="24dp"
+                android:layout_marginBottom="@dimen/margin_M"
+                android:paddingLeft="@dimen/padding_L"
                 android:text="@string/taste_for_sweet_foods"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/margin_M"
             android:background="@drawable/shape"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="@dimen/padding_SM">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/margin_S"
+                android:layout_marginTop="@dimen/margin_S"
                 android:text="@string/question_5"
                 android:textAllCaps="true"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/margin_S"
+                android:layout_marginTop="@dimen/margin_S"
                 android:text="@string/question_E5"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <RadioGroup
                 android:id="@+id/question_E5"
@@ -327,26 +328,26 @@
                     android:id="@+id/qE5_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:paddingLeft="24dp"
+                    android:layout_marginBottom="@dimen/margin_M"
+                    android:paddingLeft="@dimen/padding_L"
                     android:text="@string/a_true"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_M" />
 
                 <RadioButton
                     android:id="@+id/qE5_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:paddingLeft="24dp"
+                    android:layout_marginBottom="@dimen/margin_M"
+                    android:paddingLeft="@dimen/padding_L"
                     android:text="@string/a_false"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_M" />
             </RadioGroup>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="@dimen/margin_L"
             android:orientation="horizontal">
 
 
@@ -354,25 +355,25 @@
                 android:id="@+id/restart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="36dp"
+                android:layout_marginLeft="@dimen/margin_XL"
+                android:layout_marginRight="@dimen/margin_M"
                 android:layout_weight="1"
                 android:background="@drawable/restart_button"
                 android:onClick="restart"
                 android:text="@string/restart_button"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <Button
                 android:id="@+id/submit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="36dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginLeft="@dimen/margin_XL"
+                android:layout_marginRight="@dimen/margin_M"
                 android:layout_weight="1"
                 android:background="@drawable/next_button"
                 android:onClick="submit"
                 android:text="@string/next_button"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
         </LinearLayout>
 
 
