--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -14,46 +14,46 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="124dp"
+            android:layout_height="@dimen/header_height"
             android:background="@color/white"
             android:src="@drawable/cats" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="@dimen/margin_M"
             android:background="@color/white"
             android:fontFamily="@font/catfont"
             android:gravity="center_horizontal"
-            android:paddingBottom="10dp"
+            android:paddingBottom="@dimen/padding_SM"
             android:text="@string/app_name"
             android:textAllCaps="true"
             android:textColor="@color/black"
-            android:textSize="56sp" />
+            android:textSize="@dimen/text_XXXL" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginBottom="@dimen/margin_S"
+            android:layout_marginTop="@dimen/margin_L"
             android:text="@string/options"
             android:textAllCaps="true"
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="@dimen/text_M" />
 
         <LinearLayout
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="48dp"
-            android:layout_marginRight="48dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginBottom="@dimen/margin_M"
+            android:layout_marginLeft="@dimen/margin_XXL"
+            android:layout_marginRight="@dimen/margin_XXL"
+            android:layout_marginTop="@dimen/margin_M"
             android:actionProviderClass="android.widget.ShareActionProvider"
             android:background="@drawable/shape"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="@dimen/padding_SM">
 
 
             <EditText
@@ -68,23 +68,23 @@
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="48dp"
-            android:layout_marginRight="48dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginBottom="@dimen/margin_M"
+            android:layout_marginLeft="@dimen/margin_XXL"
+            android:layout_marginRight="@dimen/margin_XXL"
+            android:layout_marginTop="@dimen/margin_M"
             android:background="@drawable/shape2"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="@dimen/padding_SM">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginBottom="@dimen/margin_M"
+                android:layout_marginTop="@dimen/margin_M"
                 android:text="@string/difficulty_level"
                 android:textAllCaps="true"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <RadioGroup
                 android:id="@+id/difficulty"
@@ -95,28 +95,28 @@
                     android:id="@+id/easy"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:paddingLeft="24dp"
+                    android:layout_marginBottom="@dimen/margin_M"
+                    android:paddingLeft="@dimen/padding_L"
                     android:text="@string/level_easy"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_M" />
 
                 <RadioButton
                     android:id="@+id/medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:paddingLeft="24dp"
+                    android:layout_marginBottom="@dimen/margin_M"
+                    android:paddingLeft="@dimen/padding_L"
                     android:text="@string/level_medium"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_M" />
 
                 <RadioButton
                     android:id="@+id/hard"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:paddingLeft="24dp"
+                    android:layout_marginBottom="@dimen/margin_M"
+                    android:paddingLeft="@dimen/padding_L"
                     android:text="@string/level_hard"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_M" />
             </RadioGroup>
         </LinearLayout>
 
@@ -124,58 +124,57 @@
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="48dp"
-            android:layout_marginRight="48dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginBottom="@dimen/margin_M"
+            android:layout_marginLeft="@dimen/margin_XXL"
+            android:layout_marginRight="@dimen/margin_XXL"
+            android:layout_marginTop="@dimen/margin_M"
             android:actionProviderClass="android.widget.ShareActionProvider"
             android:background="@drawable/shape3"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="@dimen/padding_M">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/number_of_questions"
                 android:textAllCaps="true"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_M" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="@dimen/margin_M"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/subbutton"
-                    android:layout_width="56dp"
-                    android:layout_height="56dp"
+                    android:layout_width="@dimen/add_button_M"
+                    android:layout_height="@dimen/add_button_M"
                     android:background="@drawable/next_button_blue"
                     android:onClick="decrement"
                     android:text="-"
-                    android:textSize="24sp" />
-
+                    android:textSize="@dimen/text_L" />
 
                 <TextView
                     android:id="@+id/quantity_text_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="24dp"
-                    android:layout_marginRight="24dp"
+                    android:layout_marginLeft="@dimen/margin_L"
+                    android:layout_marginRight="@dimen/margin_L"
                     android:text="5"
                     android:textColor="@color/black"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_M" />
 
                 <Button
                     android:id="@+id/addbutton"
-                    android:layout_width="56dp"
-                    android:layout_height="56dp"
+                    android:layout_width="@dimen/add_button_M"
+                    android:layout_height="@dimen/add_button_M"
                     android:background="@drawable/next_button_blue"
                     android:onClick="increment"
                     android:text="+"
-                    android:textSize="24sp" />
+                    android:textSize="@dimen/text_L" />
             </LinearLayout>
 
 
@@ -187,11 +186,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/margin_M"
             android:background="@drawable/next_button"
             android:onClick="startQuiz"
             android:text="@string/start_quiz_button"
-            android:textSize="16sp" />
+            android:textSize="@dimen/text_M" />
 
 
     </LinearLayout>
